Bug 482600 - Etesync calendar source missing
Summary: Etesync calendar source missing
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-06 22:24 UTC by Sandro
Modified: 2024-06-26 22:13 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
merkuro account pop-up (140.33 KB, image/png)
2024-03-06 22:24 UTC, Sandro
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sandro 2024-03-06 22:24:08 UTC
Created attachment 166516 [details]
merkuro account pop-up

Since the update to 24.02, I can no longer add an etasync account. I had an account already set up that was shown as offline after the update. I removed the account and tried to add it again, but  the option is missing from "add account" pop-up. I browsed the commit history and could not find a note about etesync being removed on purpose, so I'm filing a bug report. 


STEPS TO REPRODUCE
1. Navigate to Settings > Configure Merkuro Calendar > Accounts > Add Account

OBSERVED RESULT
Etesync Groupware is not displayed as an option

EXPECTED RESULT
Etesync Groupware displayed as an option

Operating System: Arch Linux 
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 3800X 8-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 7900 XTX

ADDITIONAL INFORMATION
This started happening for me after the update to the Plasma 6 mega release.
Comment 1 Christophe Marin 2024-03-07 00:02:31 UTC
the kdepim-runtime etesync resource fails to build since months, that's why you can't add it. Distributions removed the optional dependency
Comment 2 korgens 2024-03-11 21:10:50 UTC
I've also tried to compile the package kdepim-runtime (6.0.1) on Archlinux to try to enable libetebase (and allow etesync to be used. However, the compilation presents this error:

-------
make[2]: *** [resources/etesync/CMakeFiles/akonadi_etesync_resource.dir/build.make:150: resources/etesync/CMakeFiles/akonadi_etesync_resource.dir/journalsfetchjob.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/user/arch/abs/kdepim-runtime/src/kdepim-runtime-24.02.0/resources/etesync/loginjob.cpp:9:10: fatal error: QtConcurrent: No such file or directory
    9 | #include <QtConcurrent>
      |          ^~~~~~~~~~~~~~
compilation terminated.
-----------

I've installed the package qt-base, which contains the folder QTCurrent with many header files in there, but it didn't help. The error continues so this can't be compiled. Maybe there is some make file configuration missing?
Comment 3 Antonio Rojas 2024-03-11 21:52:39 UTC
The QtConcurrent issue should be fixed with https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/137, but that alone won't make it build. It hasn't been properly ported to Qt6 yet.
Comment 4 Carl Schwan 2024-03-12 09:31:23 UTC
Git commit 65edf9bbf56de4a58bbfbe833cb546617c54a201 by Carl Schwan.
Committed on 12/03/2024 at 09:31.
Pushed by carlschwan into branch 'master'.

Bring back etesync support

M  +2    -2    CMakeLists.txt
M  +1    -0    resources/etesync/CMakeLists.txt
M  +2    -1    resources/etesync/entriesfetchjob.cpp
M  +2    -1    resources/etesync/journalsfetchjob.cpp
M  +2    -1    resources/etesync/loginjob.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/65edf9bbf56de4a58bbfbe833cb546617c54a201
Comment 5 Carl Schwan 2024-03-13 10:48:56 UTC
Git commit 6f4914ac93e939e0f83b32a2eefe5d7f012a029f by Carl Schwan.
Committed on 13/03/2024 at 10:48.
Pushed by carlschwan into branch 'release/24.02'.

Bring back etesync support

M  +2    -2    CMakeLists.txt
M  +1    -0    resources/etesync/CMakeLists.txt
M  +3    -2    resources/etesync/entriesfetchjob.cpp
M  +3    -2    resources/etesync/journalsfetchjob.cpp
M  +3    -2    resources/etesync/loginjob.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/6f4914ac93e939e0f83b32a2eefe5d7f012a029f
Comment 6 ioo+kde 2024-06-26 22:12:35 UTC
This has been marked as RESOLVED FIXED however as of version 4:24.05.1 on KDE Neon the option to add a Etesync Groupware Resource is still missing.
Comment 7 Antonio Rojas 2024-06-26 22:13:41 UTC
(In reply to ioo+kde from comment #6)
> This has been marked as RESOLVED FIXED however as of version 4:24.05.1 on
> KDE Neon the option to add a Etesync Groupware Resource is still missing.

That's a Neon issue then.