Bring back etesync support

BUG: 482600